demux/dummy: No need to check for playlist availability. (Also fix #1543)

This is a bit contriversial, but libvlc actually uses vlc://nop, and this without a playlist.